# Personal-local-AI-companion

./: .gitignore  docs.md  expectations.md  index.html  package-lock.json  package.json  readme.md  server.py
backend/: .gitignore  backend.spec  pyproject.toml  requirements.txt  server.py
backend/app/: agent.py  config.py  database.py  mcp_client.py  model_loader.py  routes.py  voice.py
backend/mcp_servers/browser/: server.py
backend/mcp_servers/email/: server.py
backend/mcp_servers/filesystem/: server.py
backend/mcp_servers/notes/: server.py
backend/mcp_servers/reminders/: server.py
backend/voice_stt/: __main__.py  server.py  voice_stt.spec
electron/: main.js  preload.js
reference-code/: agent_orchestrator_react_fixes.py  email_mcp_server_ux_fixes.py  mcp_orchestrator.py  reminders_mcp_server_ux_fixes.py
src/: App.jsx  main.jsx  store.js
src/components/: ImportModelModal.jsx  PermissionsToggles.jsx  SidebarNavigation.css  SidebarNavigation.jsx
src/screens/: AutomationsScreen.jsx  ChatScreen.jsx  IntegrationsScreen.jsx  LocalAIScreen.jsx  MemoryScreen.jsx  PrivacyScreen.jsx  SettingsScreen.jsx  SetupScreen.jsx  TasksScreen.jsx  TitleBar.jsx  WelcomeScreen.jsx  screens.css
src/styles/: DESIGN-vercel.css  chat.css  fonts.css  setup.css  voice.css
