[project]
name = "desktop-companion-backend"
version = "0.1.0"
description = "AI backend for Desktop Companion — FastAPI + LangChain + MCP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.0",
    "huggingface-hub>=0.25.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0",
    "python-dotenv>=1.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
llm = [
    "llama-cpp-python>=0.3.0",
]
quant = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
    "peft>=0.10.0",
]
full = [
    "llama-cpp-python>=0.3.0",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
    "peft>=0.10.0",
]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "mcp_servers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
